fix #91 signup form overflow

--- a/ember/app/styles/components/user-subpanels.scss
+++ b/ember/app/styles/components/user-subpanels.scss
@@ -34,7 +34,7 @@
         padding: 0;
       }
       .overflow-scroll {
-        margin: 0 25px;
+        padding-left: 0.5em;
         height: calc(100% - 125px);
         .scroll-wrapper {
           padding-bottom: 20px;
